--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="Box box_main">
-        <img src="/img/gogo.png" alt="" class="last-img" />
+        <img src="img/gogo.png" alt="" class="last-img" />
       </div>
     </div>
   </body>
